--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </ul>
         </div>
         <!--first section, title, description, image-->
-        <div>
-            <div>
+        <div class="hero">
+            <div class="hero-left">
                 <h2>This website is awesome</h2>
                 <p>This website has some subtext that goes here under the
                 main title. It's a smaller font and the color is lower
@@ -31,27 +31,9 @@
         <!--bits of information-->
         <div class="info-section">
             <h2>Some random information.</h2>
-            <div class="info-1"></div>
-                <div class="box">
-                    <img src="" alt="">
-                </div>
-                <div class="subtext"></div>
-            <div class="info-2"></div>
-                <div class="box">
-                    <img src="" alt="">
-                </div>
-                <div class="subtext"></div>
-            <div class="info-3"></div>
-                <div class="box">
-                    <img src="" alt="">
-                </div>
-                <div class="subtext"></div>
-            <div class="info-4"></div>
-                <div class="box">
-                    <img src="" alt="">
-                </div>
-                <div class="subtext"></div>
-        </div>
+            <div class="boxes">
+            
+            </div>
         <!--testimonial section-->
         <div class="testimonials">
             <p>This is an inspiring quote, or a testimonial from a 
