--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Landing Page</title>
         <link rel="stylesheet" href="styles.css">
+        
     </head>
     <body>
         <!--header/navigation bar-->
@@ -22,37 +23,68 @@
                 <p>This website has some subtext that goes here under the
                 main title. It's a smaller font and the color is lower
                 contrast.</p>
-                <div class="button">
-                <button>Sign up</button>
-                </div>
+                <button>Sign up</button>  
             </div>
-            <img src="" alt="this is a placeholder for an image">
+             <div class="hero-image">
+                <img src="../images/laptopstockphoto.jpg" alt="this is a placeholder for an image">
+             </div>
         </div>
-        <!--bits of information-->
+        <!--4 boxes for information-->
         <div class="info-section">
             <h2>Some random information.</h2>
             <div class="boxes">
-            
+                <div class="box">
+                    <div class="info-img">
+                        <img src="">
+                    </div>
+                    <div class="info-subtext">this is some subtext under an illustration or 
+                        image.
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="info-img">
+                        <img src="">
+                    </div>
+                    <div class="info-subtext">this is some subtext under an illustration or 
+                        image.</div>
+                </div>
+                <div class="box">
+                    <div class="info-img">
+                        <img src="">
+                    </div>
+                    <div class="info-subtext">this is some subtext under an illustration or 
+                        image.</div>
+                </div>
+                <div class="box">
+                    <div class="info-img">
+                        <img src="">
+                    </div>
+                    <div class="info-subtext">this is some subtext under an illustration or 
+                        image.</div>
+                </div>
             </div>
+        </div>
         <!--testimonial section-->
         <div class="testimonials">
-            <p>This is an inspiring quote, or a testimonial from a 
+            <p class="quote">This is an inspiring quote, or a testimonial from a 
                 customer. Maybe it's just filling up space, or maybe 
                 people will actually read it. Who knows? All I know is 
                 that it looks nice.</p>
-            <p>-Thor, God of Thunder</p>
+            <p class="quote-author">-Thor, God of Thunder</p>
         </div>
         <!--call to action-->
         <div class="call-to-action">
-            <div>
-            <h4>Call to action! It's time!</h4>
+            <div class="cta-text">
+            <h3>Call to action! It's time!</h3>
             <p>Sign up for our product by clicking that button right over there.</p>
             </div>
-            <div class="button">
-                <button>Sign up</button>
+            <div class="cta-button">
+            <button>Sign up</button>
             </div>
         </div>
         <!--footer bar-->
-        <div class="footer">Copyright The Odin Project 2021</div>
+        <div class="footer">
+            <div class="footer-text">Copyright The Odin Project 2021</div>
+        </div>
     </body>
 </html>
